feat(mock data): ajout le module json-server et des scripts pour l'utiliser
Pour ajouter réponse à des routes, aller dans le fichier maw-frontend-react/test/mock-db.json
et s'inspirer de ce qui est déjà là pour ajouter vos data et routes.

Pour lancer le server mock, "npm run-script start:mock-db
Pour lancer le server mock ET le server du site, "npm run-script start:with-mock-db".
Avec cette dernière commande, le server mock s'ouvre dans un 2eme terminal.
Avec cette dernière commande, on peut sans problème arrêter le server du site,
puis relancer avec la même commande.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build:html": "node ./bin/buildHtml.js",
     "prestart": "npm run clean:build",
     "start": "webpack-dashboard -c cyan -- node dev-server.js",
+    "start:with-mock-db": "gnome-terminal --command='npm run-script start:mock-db' & npm start",
+    "start:mock-db": "json-server --watch ./test/mock-db.json --port=3001",
     "prebuild": "npm run clean:build",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.production.js --progress",
     "postbuild": "npm run build:html",
@@ -81,6 +83,7 @@
     "babel-runtime": "6.11.6",
     "classnames": "2.2.5",
     "express": "4.14.0",
+    "json-server": "0.9.4",
     "lodash": "4.15.0",
     "raven-js": "3.6.1",
     "react": "15.3.1",
