--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prestart": "npm run clean:build",
     "start": "webpack-dashboard -c cyan -- node dev-server.js",
     "start:with-mock-db": "gnome-terminal --command='npm run-script start:mock-db' & npm start",
-    "start:mock-db": "json-server --watch ./test/mock-db.json --port=3001",
+    "start:mock-db": "json-server --watch ./test/mock-db.json --port=3001 --routes ./test/routes.json",
     "prebuild": "npm run clean:build",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.production.js --progress",
     "postbuild": "npm run build:html",
