--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "babel-runtime": "6.11.6",
     "classnames": "2.2.5",
     "express": "4.14.0",
+    "isomorphic-fetch": "2.2.1",
     "json-server": "0.9.4",
     "lodash": "4.15.0",
     "raven-js": "3.6.1",
