--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-dom": "15.3.1",
     "react-hot-loader": "3.0.0-beta.2",
     "react-redux": "4.4.5",
+    "react-rnd": "4.2.2",
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
     "redux": "3.5.2",
